# range-ext

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: binary_result.rs  intersect.rs  lib.rs  range_interval.rs  split.rs  subtraction.rs  successor.rs
