[package]
name = "range-ext"
version = "0.5.0"
authors = ["anicka.burova@gmail.com"]
edition = "2018"
description = "Range intersection"
license = "MIT"
homepage = "https://github.com/AnickaBurova/range-ext"
repository = "https://github.com/AnickaBurova/range-ext"
keywords = ["range", "intersect", "intersection"]

